    determined at **runtime** whether negative indexing is used!
    ``a[0.. -1]`` now produces the empty string/sequence.
  - The compiler now warns about code like ``foo +=1`` which uses inconsistent
    spacing around binary operators. Later versions of the language will parse
    these as unary operators instead so that ``echo $foo`` finally can do what
    people expect it to do.


  Language Additions
  ------------------

  - For empty ``case object`` branches ``discard`` can finally be used instead
    of ``nil``.
  - Automatic dereferencing is now done for the first argument of a routine
    call if overloading resolution produces no match otherwise. This feature
    has to be enabled with the `experimental`_ pragma.
  - Objects that do not use inheritance nor ``case`` can be put into ``const``
    sections. This means that finally this is possible and produces rather
    nice code:

  .. code-block:: nim
    import tables

    const
      foo = {"ah": "finally", "this": "is", "possible.": "nice!"}.toTable()


  - Ordinary parameters can follow after a varargs parameter. This means the
    following is finally accepted by the compiler:

  .. code-block:: nim
    template takesBlock(a, b: int, x: varargs[expr]; blck: stmt) =
      blck
      echo a, b

    takesBlock 1, 2, "some", 0.90, "random stuff":
      echo "yay"

  - Overloading by 'var T' is now finally possible:

  .. code-block:: nim
    proc varOrConst(x: var int) = echo "var"
    proc varOrConst(x: int) = echo "const"

    var x: int
    varOrConst(x) # "var"
    varOrConst(45) # "const"

  - Array and seq indexing can now use the builtin ``^`` operator to access
    things from backwards: ``a[^1]`` is like Python's ``a[-1]``.
  - A first version of the specification and implementation of the overloading
    of the assignment operator has arrived!


  Library additions
  -----------------

  - ``reversed`` proc added to the ``unicode`` module.